<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextWebContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/path_web_content"
        android:ems="10"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:tooltipText="@string/path_web_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="77dp"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/imageButton"
        android:contentDescription="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_search"
        android:layout_marginTop="20dp"
        android:layout_marginStart="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/textViewIpAddress"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:text="@string/ipAddress"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="244dp" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="112dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text|number"
        android:hint="@string/Port"
        android:tooltipText="@string/Port"
        android:layout_marginTop="100dp"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="159dp"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/imageButtonUp"
        android:contentDescription="@string/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/arrow_up_float"
        android:layout_marginTop="90dp"
        android:layout_marginStart="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="150dp" />

    <ImageButton
        android:id="@+id/imageButtonDown"
        android:contentDescription="@string/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:layout_marginTop="120dp"
        android:layout_marginStart="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="180dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="170dp"
        android:layout_marginStart="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="470dp" />

</androidx.constraintlayout.widget.ConstraintLayout>